--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,11 @@ body.dark {
 
 /* header */
 
-.header {
+.line-header{
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    flex-direction: row;
 }
 
 .nav {
@@ -150,7 +150,6 @@ body.dark {
     border: none;
 }
 
-/* styling of animated border */
 .form:before {
     content: "";
     position: absolute;
@@ -165,7 +164,6 @@ body.dark {
     transition: transform var(--timing) ease;
 }
 
-/* Hover on Input */
 .form:focus-within {
     border-radius: var(--after-border-radius);
 }
@@ -174,7 +172,6 @@ input:focus {
     outline: none;
 }
 
-/* here is code of animated border */
 .form:focus-within:before {
     transform: scale(1);
 }
@@ -268,7 +265,7 @@ input:checked+.slider:before {
 
 .nome-conta{
     font-weight: 500;
-    text-align: start;
+    text-align: center;
 }
 
 .login-cadastro{
@@ -288,11 +285,107 @@ input:checked+.slider:before {
     text-align: start;
 }
 
+
+
+/*Responsividade Menu*/
+
+.line-bottom{
+    display: none;
+}
+
+.form-mobile{
+    display: none;
+}
+
+.mobile-menu-icon{
+    display: none;
+}
+
+@media screen and (max-width: 800px){
+
+
+    .header{
+        justify-content: space-evenly;
+    }
+    
+    .nav{
+        display: none;
+    }
+
+    .perfil{
+        display: none;
+    }
+
+    .container-icons{
+        display: none;
+    }
+
+    .form{
+        display: none;
+    }
+
+    .mobile-menu-icon{
+        display: flex;
+        align-items: center;
+    }
+
+    .menu-button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    .menu-button:active{
+        opacity: 0.5;
+    }
+
+    .menu-mobile{
+        display: flex;
+        flex-direction: column;
+        padding: 35px;
+        border-top: 1px solid #f1f0fa;
+    }
+
+    .menu-mobile-header{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu-mobile-bottom{
+        display: grid;
+        place-items: center;
+    }
+
+    .nav-list-mobile{
+        display: flex;
+        justify-content: space-between;
+        margin: 10px;
+    }
+
+    .open{
+        display: block;
+    }
+
+    .line-form{
+        display: grid;
+        place-items: center;
+    }
+
+    .form-mobile{
+        display: flex;
+        margin: 5px;
+    }
+}
+
+
+
 /* Main */
 
 .banner {
     width: 100%;
 }
+
+
 
 .container-categoria {
     display: grid;
@@ -496,3 +589,5 @@ input:checked+.slider:before {
 .footer-icons {
     padding: 0 10px;
 }
+
+
