--- a/views/Contato/contato.css
+++ b/views/Contato/contato.css
@@ -86,11 +86,11 @@ body.dark {
 
 /* header */
 
-.header {
+.line-header {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    flex-direction: row;
 }
 
 .nav {
@@ -121,83 +121,6 @@ body.dark {
 .form button {
     border: none;
     background: none;
-    color: #FFA7DE;
-}
-
-.form {
-    --timing: 0.3s;
-    --width-of-input: 200px;
-    --height-of-input: 40px;
-    --border-height: 2px;
-    --input-bg: ;
-    --border-color: #FFA7DE;
-    --border-radius: 30px;
-    --after-border-radius: 1px;
-    position: relative;
-    width: var(--width-of-input);
-    height: var(--height-of-input);
-    display: flex;
-    align-items: center;
-    padding-inline: 0.8em;
-    border-radius: var(--border-radius);
-    transition: border-radius 0.5s ease;
-    background: var(--input-bg, #f1f0fa);
-}
-
-.input {
-    font-size: 0.9rem;
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    padding-inline: 0.5em;
-    padding-block: 0.7em;
-    border: none;
-}
-
-/* styling of animated border */
-.form:before {
-    content: "";
-    position: absolute;
-    background: var(--border-color);
-    transform: scaleX(0);
-    transform-origin: center;
-    width: 100%;
-    height: var(--border-height);
-    left: 0;
-    bottom: 0;
-    border-radius: 1px;
-    transition: transform var(--timing) ease;
-}
-
-/* Hover on Input */
-.form:focus-within {
-    border-radius: var(--after-border-radius);
-}
-
-input:focus {
-    outline: none;
-}
-
-/* here is code of animated border */
-.form:focus-within:before {
-    transform: scale(1);
-}
-
-.reset {
-    border: none;
-    background: none;
-    opacity: 0;
-    visibility: hidden;
-}
-
-input:not(:placeholder-shown)~.reset {
-    opacity: 1;
-    visibility: visible;
-}
-
-.form svg {
-    width: 17px;
-    margin-top: 3px;
     color: #FFA7DE;
 }
 
@@ -272,7 +195,7 @@ input:checked+.slider:before {
 
 .nome-conta {
     font-weight: 500;
-    text-align: start;
+    text-align: center;
 }
 
 .login-cadastro {
@@ -290,6 +213,97 @@ input:checked+.slider:before {
 .login-cadastro p {
     font-size: 14px;
     text-align: start;
+}
+
+/*Responsividade Menu*/
+
+.line-bottom {
+    display: none;
+}
+
+.form-mobile {
+    display: none;
+}
+
+.mobile-menu-icon {
+    display: none;
+}
+
+@media screen and (max-width: 800px) {
+
+
+    .header {
+        justify-content: space-evenly;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .perfil {
+        display: none;
+    }
+
+    .container-icons {
+        display: none;
+    }
+
+    .form {
+        display: none;
+    }
+
+    .mobile-menu-icon {
+        display: flex;
+        align-items: center;
+    }
+
+    .menu-button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    .menu-button:active {
+        opacity: 0.5;
+    }
+
+    .menu-mobile {
+        display: flex;
+        flex-direction: column;
+        padding: 35px;
+        border-top: 1px solid #f1f0fa;
+    }
+
+    .menu-mobile-header {
+        display: flex;
+        justify-content: start;
+        margin: 15px 0;
+    }
+
+    .menu-mobile-bottom {
+        display: grid;
+        place-items: center;
+    }
+
+    .nav-list-mobile {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px;
+    }
+
+    .open {
+        display: block;
+    }
+
+    .line-form {
+        display: grid;
+        place-items: center;
+    }
+
+    .form-mobile {
+        display: flex;
+        margin: 5px;
+    }
 }
 
 
