--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -12,47 +12,89 @@
 <body>
     <header class="header">
 
-        <nav class="nav">
+        <div class="line-header">
+
+            <div class="mobile-menu-icon">
+                <button class="menu-button" onclick="menuShow()"><img class="icon-mobile"
+                        src="../../img/menu-icon.svg" /></button>
+            </div>
 
             <a href="#">
                 <img src="../../img/logo.png" alt="logo" class="logo-header">
             </a>
 
-            <ul class="nav-list">
-                <li class="nav-item">
-                    <a class="item" href="../../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="item" href="../Produtos/index.html">Produtos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="item" href="../Contato/index.html">Contato</a>
-                </li>
-            </ul>
-        </nav>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item">
+                        <a class="item" href="../../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="item" href="../Produtos/index.html">Produtos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="item" href="#">Contato</a>
+                    </li>
+                </ul>
+            </nav>
 
-
-        <div class="container-icons">
             <div class="perfil">
-                <img src="../../img/perfil.png" alt="perfil">
                 <div class="container-login-cadastro">
-                    <h4 class="nome-conta">Minha conta</h4>
+                    <h4 class="nome-conta">Faça login</h4>
                     <div class="login-cadastro">
-                        <a href="../../views/Login/index.html">Login</a>
+                        <a href="../Login/index.html">Login</a>
                         <p>/</p>
-                        <a href="../../views/Cadastro/index.html">Cadastro</a>
+                        <a href="../Cadastro/">Cadastro</a>
                     </div>
                 </div>
             </div>
+
+            <div>
+                <label class="switch">
+                    <input type="checkbox" checked="checked" id="chk" />
+                    <span class="slider"></span>
+                </label>
+            </div>
+
         </div>
 
-        <div>
-            <label class="switch">
-                <input type="checkbox" checked="checked" id="chk" />
-                <span class="slider"></span>
-            </label>
-        </div>
+        <!--Menu Mobile-->
 
+        <div class="line-bottom">
+
+            <div class="menu-mobile">
+
+                <div class="menu-mobile-header">
+
+                    <div class="perfil-mobile">
+                        <div class="container-login-cadastro">
+                            <h4 class="nome-conta">Faça login</h4>
+                            <div class="login-cadastro">
+                                <a href="../Login/index.html">Login</a>
+                                <p>/</p>
+                                <a href="../Cadastro/index.html">Cadastro</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="menu-mobile-bottom">
+                    <nav class="nav-mobile">
+                        <ul class="nav-list-mobile">
+                            <li class="nav-item">
+                                <a class="item" href="../../index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="item" href="../Produtos/index.html">Produtos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="item" href="#">Contato</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </header>
 
 
@@ -176,6 +218,7 @@
     </footer>
 
     <script src="../../js/modoNoturno.js"></script>
+    <script src="../../js/menuResponsivo.js"></script>
 </body>
 
 </html>
