--- a/views/Produtos/produto.css
+++ b/views/Produtos/produto.css
@@ -39,15 +39,15 @@ body.dark {
         font-size: 16px;
     }
 
-    .login-cadastro a{
+    .login-cadastro a {
         color: #f1f0fa;
     }
 
-    .login-cadastro p{
+    .login-cadastro p {
         color: #f1f0fa;
     }
 
-    .titulo-produto{
+    .titulo-produto {
         color: #fafafa;
     }
 
@@ -86,11 +86,11 @@ body.dark {
 
 /* header */
 
-.header {
+.line-header {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-around;
+    flex-direction: row;
 }
 
 .nav {
@@ -154,7 +154,6 @@ body.dark {
     border: none;
 }
 
-/* styling of animated border */
 .form:before {
     content: "";
     position: absolute;
@@ -169,7 +168,6 @@ body.dark {
     transition: transform var(--timing) ease;
 }
 
-/* Hover on Input */
 .form:focus-within {
     border-radius: var(--after-border-radius);
 }
@@ -178,7 +176,6 @@ input:focus {
     outline: none;
 }
 
-/* here is code of animated border */
 .form:focus-within:before {
     transform: scale(1);
 }
@@ -261,37 +258,126 @@ input:checked+.slider:before {
     box-shadow: inset 15px -4px 0px 15px var(--corPrimaria);
 }
 
-.perfil{
+.perfil {
     display: flex;
     align-items: center;
 }
 
-.container-login-cadastro{
+.container-login-cadastro {
     padding: 0 30px;
 }
 
-.nome-conta{
+.nome-conta {
     font-weight: 500;
-    text-align: start;
+    text-align: center;
 }
 
-.login-cadastro{
+.login-cadastro {
     display: flex;
     justify-content: center;
 }
 
-.login-cadastro a{
+.login-cadastro a {
     font-size: 14px;
     padding: 0 2px;
     color: #2a2c2b;
     text-align: start;
 }
 
-.login-cadastro p{
+.login-cadastro p {
     font-size: 14px;
     text-align: start;
 }
 
+/*Responsividade Menu*/
+
+.line-bottom {
+    display: none;
+}
+
+.form-mobile {
+    display: none;
+}
+
+.mobile-menu-icon {
+    display: none;
+}
+
+@media screen and (max-width: 800px) {
+
+
+    .header {
+        justify-content: space-evenly;
+    }
+
+    .nav {
+        display: none;
+    }
+
+    .perfil {
+        display: none;
+    }
+
+    .container-icons {
+        display: none;
+    }
+
+    .form {
+        display: none;
+    }
+
+    .mobile-menu-icon {
+        display: flex;
+        align-items: center;
+    }
+
+    .menu-button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+    }
+
+    .menu-button:active {
+        opacity: 0.5;
+    }
+
+    .menu-mobile {
+        display: flex;
+        flex-direction: column;
+        padding: 35px;
+        border-top: 1px solid #f1f0fa;
+    }
+
+    .menu-mobile-header {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu-mobile-bottom {
+        display: grid;
+        place-items: center;
+    }
+
+    .nav-list-mobile {
+        display: flex;
+        justify-content: space-between;
+        margin: 10px;
+    }
+
+    .open {
+        display: block;
+    }
+
+    .line-form {
+        display: grid;
+        place-items: center;
+    }
+
+    .form-mobile {
+        display: flex;
+        margin: 0 0 15px 0;
+    }
+}
 
 .container-hr {
     display: grid;
@@ -302,6 +388,8 @@ input:checked+.slider:before {
     width: 90%;
     border-color: #F8F7FC;
 }
+
+/*Main*/
 
 
 .container-produtos {
