--- a/views/RecuperarSenha/index.html
+++ b/views/RecuperarSenha/index.html
@@ -11,6 +11,18 @@
 
 <body>
 
+    <header>
+        <div class="container-buttonVoltar">
+            <a href="../../index.html" class="button-voltar">Volta</a>
+        </div>
+        <div>
+            <label class="switch">
+                <input type="checkbox" checked="checked" id="chk" />
+                <span class="slider"></span>
+            </label>
+        </div>
+    </header>
+
     <main class="main">
 
         <div class="container-form-recuperarSenha">
@@ -42,6 +54,7 @@
         </div>
     </main>
 
+    <script src="../../js/modoNoturno.js"></script>
     <script src="../../js/mostrarSenha.js"></script>
 </body>
 
